[package]
name = "grid"
version = "0.1.0"
authors = ["daxpedda <daxpedda@gmail.com>", "Luni-4 <luni-4@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced =  { git = "https://github.com/hecrj/iced.git", rev = "61c747b53589d98f477fea95f85d2ea5349666d3" }
iced_aw = { path = "../..", default-features = false, features = ["grid"] }
