[package]
name = "selection_list"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>", "Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
iced =  { git = "https://github.com/hecrj/iced.git", rev = "61c747b53589d98f477fea95f85d2ea5349666d3" }
iced_aw = { path = "../..", default-features = false, features = ["selection_list"] }
